se trabaja en abrigos y zapatos.

--- a/abrigos.html
+++ b/abrigos.html
@@ -70,9 +70,137 @@
       </nav>
     </header>
 
-    <main>
-      <section></section>
-    </main>
+    <section class="remeras">
+      <div class="container py-5">
+        <h2 class="text-center">Nuestros Abrigos</h2>
+          <div class="row py-5">
+            <h3 class="text-center py-3">Abrigos que amamos</h3>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Abrigos/buzo-bea.jpg"
+              alt="img de un buzo"
+              class="img-fluid"
+            />
+            <h4>Buzo Beatles</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Abrigos/buzo-cala.jpg"
+              alt="img de un buzo"
+              class="img-fluid"
+            />
+            <h4>Buzo cala</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Abrigos/buzo-pinkf.jpg"
+              alt="img de un buzo"
+              class="img-fluid"
+            />
+            <h4>Buzo Pink Floyd</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Abrigos/buzo-polaroid.jpg"
+              alt="img de un buzo"
+              class="img-fluid"
+            />
+            <h4>Buzo Polaroid</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+        </div>
+        <h2 class="text-center">Nuevos ingresos</h2>
+        <div class="row py-5">
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Abrigos/buzo-redhot.jpg"
+              alt="img de un buzo"
+              class="img-fluid"
+            />
+            <h4>Buzo Red Hot</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Abrigos/campera-jean.jpg"
+              alt="img de un buzo"
+              class="img-fluid"
+            />
+            <h4>Campera Jean</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Abrigos/foto1.jpg"
+              alt="img de un buzo"
+              class="img-fluid"
+            />
+            <h4>Sweater</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Abrigos/foto2.jpg"
+              alt="img de un buzo"
+              class="img-fluid"
+            />
+            <h4>Campera de Cuero</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!--Footer-->
     <footer class="footer">
