--- a/zapatos.html
+++ b/zapatos.html
@@ -69,6 +69,137 @@
         </div>
       </nav>
     </header>
+
+    <section class="remeras">
+      <div class="container py-5">
+        <h2 class="text-center">Zapatillas</h2>
+          <div class="row py-5">
+            <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Zapatos/foto1.jpg"
+              alt="img de calzado"
+              class="img-fluid"
+            />
+            <h4>Zapas</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Zapatos/foto10.jpg"
+              alt="img de calzado"
+              class="img-fluid"
+            />
+            <h4>Zapas</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Zapatos/foto11.jpg"
+              alt="img de calzado"
+              class="img-fluid"
+            />
+            <h4>Zapas</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Zapatos/foto13.jpg"
+              alt="img de calzado"
+              class="img-fluid"
+            />
+            <h4>Zapas</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+        </div>
+        <h2 class="text-center">Nuevos ingresos</h2>
+        <div class="row py-5">
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Zapatos/foto2.jpg"
+              alt="img de calzado"
+              class="img-fluid"
+            />
+            <h4>Zapas</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Zapatos/foto4.jpg"
+              alt="img de calzado"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Zapatos/foto7.jpg"
+              alt="img de calzado"
+              class="img-fluid"
+            />
+            <h4>Zapas</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Zapatos/foto8.jpg"
+              alt="img de calzado"
+              class="img-fluid"
+            />
+            <h4>Zapas</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--Footer-->
     <footer class="footer">
       <div class="container py-5">
