Se agrega ScrollReveal

--- a/abrigos.html
+++ b/abrigos.html
@@ -12,6 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+    <!--Scroll Reveal-->
+    <script src="js/scrollreveal.js"></script>
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -73,8 +75,8 @@
     <section class="remeras">
       <div class="container py-5">
         <h2 class="text-center">Nuestros Abrigos</h2>
-          <div class="row py-5">
-            <h3 class="text-center py-3">Abrigos que amamos</h3>
+        <div class="row py-5">
+          <h3 class="text-center py-3">Abrigos que amamos</h3>
           <div class="col-lg-3 remeras__card">
             <img
               src="img/Abrigos/buzo-bea.jpg"
@@ -88,7 +90,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -103,7 +110,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -118,7 +130,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -133,7 +150,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
         </div>
         <h2 class="text-center">Nuevos ingresos</h2>
@@ -151,7 +173,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -166,7 +193,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -181,7 +213,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -196,7 +233,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
         </div>
       </div>
@@ -302,6 +344,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
