--- a/faqs.html
+++ b/faqs.html
@@ -12,6 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+    <!--Scroll Reveal-->
+    <script src="js/scrollreveal.js"></script>
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -72,10 +74,10 @@
 
     <section class="nosotros">
       <div class="container py-5">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center scroll__faqs">
           <div class="col-12 text-center py-5">
             <h2 class="subtitulo"><span>Devoluciones</span></h2>
-            <h3 class="titulo">Trabajamos con</h3>
+            <h3 class="titulo">Políticas de Devoluciones</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
               error laborum ipsum. Nesciunt blanditiis illum necessitatibus
@@ -87,8 +89,8 @@
             </p>
           </div>
           <div class="col-12 text-center py-5">
-            <h2 class="subtitulo"><span>Politicas de cambio</span></h2>
-            <h3 class="titulo">Trabajamos con</h3>
+            <h2 class="subtitulo"><span>Políticas de cambio</span></h2>
+            <h3 class="titulo">Para realizar cambios</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
               error laborum ipsum. Nesciunt blanditiis illum necessitatibus
@@ -101,7 +103,7 @@
           </div>
           <div class="col-12 text-center py-5">
             <h2 class="subtitulo"><span>¿Como comprar?</span></h2>
-            <h3 class="titulo">Trabajamos con</h3>
+            <h3 class="titulo">Podes comprar</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
               error laborum ipsum. Nesciunt blanditiis illum necessitatibus
@@ -114,7 +116,7 @@
           </div>
           <div class="col-12 text-center py-5">
             <h2 class="subtitulo"><span>Formas de pago</span></h2>
-            <h3 class="titulo">Trabajamos con</h3>
+            <h3 class="titulo">Trabajamos con estos medios de pagos</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
               error laborum ipsum. Nesciunt blanditiis illum necessitatibus
@@ -140,7 +142,7 @@
           </div>
           <div class="col-12 text-center py-5">
             <h2 class="subtitulo"><span>¿Quienes somos?</span></h2>
-            <h3 class="titulo">Camila</h3>
+            <h3 class="titulo">Soy Camila</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
               error laborum ipsum. Nesciunt blanditiis illum necessitatibus
@@ -255,6 +257,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
