--- a/remeras.html
+++ b/remeras.html
@@ -12,6 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+    <!--Scroll Reveal-->
+    <script src="js/scrollreveal.js"></script>
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -73,7 +75,7 @@
     <section class="hero">
       <div class="container">
         <div class="text-light d-flex flex-column h-100 justify-content-center">
-          <h1>Disfrutá Bohemias</h1>
+          <h1 class="scroll__hero">Disfrutá Bohemias</h1>
         </div>
       </div>
     </section>
@@ -95,7 +97,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -110,7 +117,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -125,7 +137,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -140,7 +157,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
         </div>
         <h2 class="text-center">Nuevos ingresos</h2>
@@ -158,7 +180,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -173,7 +200,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -188,7 +220,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -203,7 +240,12 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
         </div>
       </div>
@@ -309,6 +351,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
