--- a/zapatos.html
+++ b/zapatos.html
@@ -12,6 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+    <!--Scroll Reveal-->
+    <script src="js/scrollreveal.js"></script>
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -73,8 +75,8 @@
     <section class="remeras">
       <div class="container py-5">
         <h2 class="text-center">Zapatillas</h2>
-          <div class="row py-5">
-            <div class="col-lg-3 remeras__card">
+        <div class="row py-5">
+          <div class="col-lg-3 remeras__card">
             <img
               src="img/Zapatos/foto1.jpg"
               alt="img de calzado"
@@ -300,6 +302,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/scrollreveal.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
