--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+    <!--Scroll Reveal-->
+    <script src="js/scrollreveal.js"></script>
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -297,7 +299,9 @@
       </section>
 
       <section class="criticas">
-        <h1 class="criticas__titulo text-center">Nuestras <span>Clientas</span></h1>
+        <h1 class="criticas__titulo text-center">
+          Nuestras <span>Clientas</span>
+        </h1>
         <div class="criticas__contenedor">
           <div class="criticas__contenedor__ind">
             <div class="criticas__contenedor__estrellas">
@@ -306,15 +310,18 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
-                error laborum ipsum. Nesciunt blanditiis illum necessitatibus
-                fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                nam error laborum ipsum. Nesciunt blanditiis illum
+                necessitatibus fugiat, laudantium cumque ratione veritatis ipsam
+                dolorem nemo
+              </p>
             </div>
             <div class="criticas__contenedor__foto">
-              <img src="img/Iconos/pic-1.png" alt="img de una persona">
+              <img src="img/Iconos/pic-1.png" alt="img de una persona" />
               <div>
                 <h3>Camila</h3>
-                <span>Disfruta Bohemias</span>
+                <span>Viví Bohemias</span>
               </div>
             </div>
             <span class="criticas__contenedor__icono fas fa-quote-right"></span>
@@ -326,15 +333,18 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
-                error laborum ipsum. Nesciunt blanditiis illum necessitatibus
-                fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                nam error laborum ipsum. Nesciunt blanditiis illum
+                necessitatibus fugiat, laudantium cumque ratione veritatis ipsam
+                dolorem nemo
+              </p>
             </div>
             <div class="criticas__contenedor__foto">
-              <img src="img/Iconos/pic-2.png" alt="img de una persona">
+              <img src="img/Iconos/pic-2.png" alt="img de una persona" />
               <div>
                 <h3>Lucia</h3>
-                <span>Disfruta Bohemias</span>
+                <span>Viví Bohemias</span>
               </div>
             </div>
             <span class="criticas__contenedor__icono fas fa-quote-right"></span>
@@ -346,15 +356,18 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
-                error laborum ipsum. Nesciunt blanditiis illum necessitatibus
-                fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                nam error laborum ipsum. Nesciunt blanditiis illum
+                necessitatibus fugiat, laudantium cumque ratione veritatis ipsam
+                dolorem nemo
+              </p>
             </div>
             <div class="criticas__contenedor__foto">
-              <img src="img/Iconos/pic-3.png" alt="img de una persona">
+              <img src="img/Iconos/pic-3.png" alt="img de una persona" />
               <div>
                 <h3>Liliana</h3>
-                <span>Disfruta Bohemias</span>
+                <span>Viví Bohemias</span>
               </div>
             </div>
             <span class="criticas__contenedor__icono fas fa-quote-right"></span>
@@ -523,6 +536,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
