--- a/productos.html
+++ b/productos.html
@@ -12,6 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+    <!--Scroll Reveal-->
+    <script src="js/scrollreveal.js"></script>
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -111,69 +113,91 @@
       </div>
     </section>
 
-    <section class="sale">
+    <section class="remeras">
       <div class="container py-5">
-        <h1 class="text-center">Productos relacionados</h1>
+        <h2 class="text-center">Productos relacionados</h2>
         <div class="row py-5">
-          <div class="col-lg-3">
-            <div class="card">
-              <img
-                src="img/Remeras/foto1.jpg"
-                class="img-fluid mb-3"
-                alt="img de una remera"
-              />
-              <input class="btn2" type="button" value="Ver" />
-              <h5>Remera</h5>
-              <p>
-                <small><del>$1.999</del><span>$1.499</span></small>
-              </p>
-            </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Remeras/foto10.jpg"
+              alt="img de una remera"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
-          <div class="col-lg-3">
-            <div class="card">
-              <img
-                src="img/Remeras/foto3.jpg"
-                class="img-fluid mb-3"
-                alt="img de una remera"
-              />
-              <input class="btn2" type="button" value="Ver" />
-              <h5>Remera</h5>
-              <p>
-                <small><del>$1.999</del><span>$1.499</span></small>
-              </p>
-            </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Remeras/foto5.jpg"
+              alt="img de una remera"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
-          <div class="col-lg-3">
-            <div class="card">
-              <img
-                src="img/Remeras/foto4.jpg"
-                class="img-fluid mb-3"
-                alt="img de una remera"
-              />
-              <input class="btn2" type="button" value="Ver" />
-              <h5>Remera</h5>
-              <p>
-                <small><del>$1.999</del><span>$1.499</span></small>
-              </p>
-            </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Remeras/foto2.jpg"
+              alt="img de una remera"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
-          <div class="col-lg-3">
-            <div class="card">
-              <img
-                src="img/Remeras/foto7.jpg"
-                class="img-fluid mb-3"
-                alt="img de una remera"
-              />
-              <input class="btn2" type="button" value="Ver" />
-              <h5>Remera</h5>
-              <p>
-                <small><del>$1.999</del><span>$1.499</span></small>
-              </p>
-            </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Remeras/foto9.jpg"
+              alt="img de una remera"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button
+              class="scroll__boton"
+              onclick="location.href='productos.html'"
+            >
+              Ver
+            </button>
           </div>
         </div>
-      </div>
-    </section>
 
     <!--Footer-->
     <footer class="footer">
@@ -275,6 +299,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/scrollreveal.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
