Se elimina scrollReveal y se integra AOS animate

--- a/zapatos.html
+++ b/zapatos.html
@@ -12,8 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <!--Scroll Reveal-->
-    <script src="js/scrollreveal.js"></script>
+    <!--Aos animate-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -89,7 +89,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button data-aos="fade-right" data-aos-duration="2000" onclick="location.href='productos.html'">Ver</button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -104,7 +104,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button data-aos="fade-right" data-aos-duration="2400" onclick="location.href='productos.html'">Ver</button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -119,7 +119,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button data-aos="fade-right" data-aos-duration="2800" onclick="location.href='productos.html'">Ver</button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -134,7 +134,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button data-aos="fade-right" data-aos-duration="3000" onclick="location.href='productos.html'">Ver</button>
           </div>
         </div>
         <h2 class="text-center">Nuevos ingresos</h2>
@@ -152,7 +152,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button data-aos="fade-left" data-aos-duration="2000"  onclick="location.href='productos.html'">Ver</button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -167,7 +167,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button data-aos="fade-left" data-aos-duration="2400" onclick="location.href='productos.html'">Ver</button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -182,7 +182,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button data-aos="fade-left" data-aos-duration="2800"  onclick="location.href='productos.html'">Ver</button>
           </div>
           <div class="col-lg-3 remeras__card">
             <img
@@ -197,7 +197,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button onclick="location.href='productos.html'">Ver</button>
+            <button data-aos="fade-left" data-aos-duration="3000" onclick="location.href='productos.html'">Ver</button>
           </div>
         </div>
       </div>
@@ -302,13 +302,18 @@
         </div>
       </div>
     </footer>
-    <script src="js/scrollreveal.js"></script>
+    <!--Aos animate-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!--Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
-
+    <!--Font Awesome-->
     <script
       src="https://kit.fontawesome.com/7d4193cf05.js"
       crossorigin="anonymous"
