--- a/abrigos.html
+++ b/abrigos.html
@@ -12,8 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <!--Scroll Reveal-->
-    <script src="js/scrollreveal.js"></script>
+    <!--Aos animate-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -90,8 +90,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button  data-aos="fade-right" data-aos-duration="2000"
               onclick="location.href='productos.html'"
             >
               Ver
@@ -110,8 +109,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-right" data-aos-duration="2400"
               onclick="location.href='productos.html'"
             >
               Ver
@@ -130,8 +128,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-right" data-aos-duration="2800"
               onclick="location.href='productos.html'"
             >
               Ver
@@ -150,8 +147,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-right" data-aos-duration="3000"
               onclick="location.href='productos.html'"
             >
               Ver
@@ -173,8 +169,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-left" data-aos-duration="2000" 
               onclick="location.href='productos.html'"
             >
               Ver
@@ -193,8 +188,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-left" data-aos-duration="2400" 
               onclick="location.href='productos.html'"
             >
               Ver
@@ -213,8 +207,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-left" data-aos-duration="2800" 
               onclick="location.href='productos.html'"
             >
               Ver
@@ -233,8 +226,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-left" data-aos-duration="3000" 
               onclick="location.href='productos.html'"
             >
               Ver
@@ -344,13 +336,18 @@
         </div>
       </div>
     </footer>
-    <script src="js/index.js"></script>
+    <!--Aos animate-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!--Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
-
+    <!--Font Awesome-->
     <script
       src="https://kit.fontawesome.com/7d4193cf05.js"
       crossorigin="anonymous"
