--- a/faqs.html
+++ b/faqs.html
@@ -12,8 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <!--Scroll Reveal-->
-    <script src="js/scrollreveal.js"></script>
+    <!--Aos animate-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -75,7 +75,7 @@
     <section class="nosotros">
       <div class="container py-5">
         <div class="row justify-content-center scroll__faqs">
-          <div class="col-12 text-center py-5">
+          <div class="col-12 text-center py-5" data-aos="zoom-in-up" data-aos-duration="1000">
             <h2 class="subtitulo"><span>Devoluciones</span></h2>
             <h3 class="titulo">Políticas de Devoluciones</h3>
             <p>
@@ -88,7 +88,7 @@
               tempora aut?
             </p>
           </div>
-          <div class="col-12 text-center py-5">
+          <div class="col-12 text-center py-5" data-aos="zoom-in-up" data-aos-duration="1000">
             <h2 class="subtitulo"><span>Políticas de cambio</span></h2>
             <h3 class="titulo">Para realizar cambios</h3>
             <p>
@@ -101,7 +101,7 @@
               tempora aut?
             </p>
           </div>
-          <div class="col-12 text-center py-5">
+          <div class="col-12 text-center py-5" data-aos="zoom-in-up" data-aos-duration="1000">
             <h2 class="subtitulo"><span>¿Como comprar?</span></h2>
             <h3 class="titulo">Podes comprar</h3>
             <p>
@@ -114,7 +114,7 @@
               tempora aut?
             </p>
           </div>
-          <div class="col-12 text-center py-5">
+          <div class="col-12 text-center py-5"data-aos="zoom-in-up" data-aos-duration="1000">
             <h2 class="subtitulo"><span>Formas de pago</span></h2>
             <h3 class="titulo">Trabajamos con estos medios de pagos</h3>
             <p>
@@ -127,7 +127,7 @@
               tempora aut?
             </p>
           </div>
-          <div class="col-12 text-center py-5">
+          <div class="col-12 text-center py-5"data-aos="zoom-in-up" data-aos-duration="1000">
             <h2 class="subtitulo"><span>Costos de Envío</span></h2>
             <h3 class="titulo">Trabajamos con</h3>
             <p>
@@ -140,7 +140,7 @@
               tempora aut?
             </p>
           </div>
-          <div class="col-12 text-center py-5">
+          <div class="col-12 text-center py-5"data-aos="zoom-in-up" data-aos-duration="1000">
             <h2 class="subtitulo"><span>¿Quienes somos?</span></h2>
             <h3 class="titulo">Soy Camila</h3>
             <p>
@@ -257,16 +257,21 @@
         </div>
       </div>
     </footer>
-    <script src="js/index.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-      crossorigin="anonymous"
-    ></script>
-
-    <script
-      src="https://kit.fontawesome.com/7d4193cf05.js"
-      crossorigin="anonymous"
-    ></script>
+   <!--Aos animate-->
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+   <script>
+     AOS.init();
+   </script>
+   <!--Bootstrap-->
+   <script
+     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+     crossorigin="anonymous"
+   ></script>
+   <!--Font Awesome-->
+   <script
+     src="https://kit.fontawesome.com/7d4193cf05.js"
+     crossorigin="anonymous"
+   ></script>
   </body>
 </html>
