--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <!--Scroll Reveal-->
-    <script src="js/scrollreveal.js"></script>
+    <!--Aos animate-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -32,7 +33,9 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg "data-aos="fade-down"
+      data-aos-easing="linear"
+      data-aos-duration="1500">
         <div class="container">
           <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
           <button
@@ -101,7 +104,10 @@
             aria-label="Slide 3"
           ></button>
         </div>
-        <div class="carousel-inner">
+        <div class="carousel-inner"data-aos="fade-left"
+        data-aos-anchor="#example-anchor"
+        data-aos-offset="500"
+        data-aos-duration="2000">
           <div class="carousel-item active" data-bs-interval="2000">
             <img
               src="img/Banners/woman-2564660_1920.jpg"
@@ -155,7 +161,7 @@
       <!--Fin carrousel-->
 
       <section class="sale">
-        <div class="container py-5">
+        <div class="container py-5" data-aos="fade-left" data-aos-duration="1500">
           <h1 class="text-center">On Sale</h1>
           <div class="row py-5">
             <div class="col-lg-3">
@@ -299,10 +305,12 @@
       </section>
 
       <section class="criticas">
-        <h1 class="criticas__titulo text-center">
+        <h1 class="criticas__titulo text-center p-5">
           Nuestras <span>Clientas</span>
         </h1>
-        <div class="criticas__contenedor">
+        <div class="criticas__contenedor"data-aos="flip-left"
+        data-aos-easing="ease-out-cubic"
+        data-aos-duration="2000">
           <div class="criticas__contenedor__ind">
             <div class="criticas__contenedor__estrellas">
               <i class="fas fa-star"></i>
@@ -536,13 +544,18 @@
         </div>
       </div>
     </footer>
-    <script src="js/index.js"></script>
+    <!--Aos animate-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!--Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
-
+    <!--Font Awesome-->
     <script
       src="https://kit.fontawesome.com/7d4193cf05.js"
       crossorigin="anonymous"
