--- a/jeans.html
+++ b/jeans.html
@@ -12,8 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <!--Scroll Reveal-->
-    <script src="js/scrollreveal.js"></script>
+    <!--Aos animate-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -108,9 +108,9 @@
             <div class="container hero__jeans">
               <div class="row">
                 <div class="col-lg-7 text-center p-5">
-                  <h2 class="hero__jeans__titulo">AMAMOS</h2>
+                  <h2 class="hero__jeans__titulo" data-aos="zoom-out" data-aos-duration="500">AMAMOS</h2>
                   <br />
-                  <h1 class="hero__jeans__subtitulo m-5">LOS JEANS</h1>
+                  <h1 class="hero__jeans__subtitulo m-5" data-aos="zoom-out" data-aos-duration="3000">LOS JEANS</h1>
                 </div>
               </div>
             </div>
@@ -339,17 +339,22 @@
             </div>
           </div>
         </footer>
-        <script src="js/scrollreveal.js"></script>
-        <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-          crossorigin="anonymous"
-        ></script>
-
-        <script
-          src="https://kit.fontawesome.com/7d4193cf05.js"
-          crossorigin="anonymous"
-        ></script>
+    <!--Aos animate-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!--Bootstrap-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
+    <!--Font Awesome-->
+    <script
+      src="https://kit.fontawesome.com/7d4193cf05.js"
+      crossorigin="anonymous"
+    ></script>
       </body>
     </html>
   </body>
