--- a/remeras.html
+++ b/remeras.html
@@ -12,8 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <!--Scroll Reveal-->
-    <script src="js/scrollreveal.js"></script>
+    <!--Aos animate-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -75,7 +75,7 @@
     <section class="hero">
       <div class="container">
         <div class="text-light d-flex flex-column h-100 justify-content-center">
-          <h1 class="scroll__hero">Disfrutá Bohemias</h1>
+          <h1 data-aos="zoom-in" data-aos-duration="3000">Disfrutá Bohemias</h1>
         </div>
       </div>
     </section>
@@ -97,8 +97,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-right" data-aos-duration="2000"             
               onclick="location.href='productos.html'"
             >
               Ver
@@ -117,8 +116,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-right" data-aos-duration="2400"              
               onclick="location.href='productos.html'"
             >
               Ver
@@ -137,8 +135,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-right" data-aos-duration="2800"            
               onclick="location.href='productos.html'"
             >
               Ver
@@ -157,8 +154,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-right" data-aos-duration="3000"             
               onclick="location.href='productos.html'"
             >
               Ver
@@ -180,8 +176,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-left" data-aos-duration="2000"           
               onclick="location.href='productos.html'"
             >
               Ver
@@ -200,8 +195,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-left" data-aos-duration="2400" 
               onclick="location.href='productos.html'"
             >
               Ver
@@ -220,8 +214,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-left" data-aos-duration="2800"               
               onclick="location.href='productos.html'"
             >
               Ver
@@ -240,8 +233,7 @@
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-star-o"></i></span>
             <p>$1.999</p>
-            <button
-              class="scroll__boton"
+            <button data-aos="fade-left" data-aos-duration="3000"                
               onclick="location.href='productos.html'"
             >
               Ver
@@ -351,13 +343,18 @@
         </div>
       </div>
     </footer>
-    <script src="js/index.js"></script>
+    <!--Aos animate-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!--Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
-
+    <!--Font Awesome-->
     <script
       src="https://kit.fontawesome.com/7d4193cf05.js"
       crossorigin="anonymous"
