se modifica tamaño de las img del carrousel

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       crossorigin="anonymous"
     />
     <!--Aos animate-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -33,9 +33,12 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg "data-aos="fade-down"
-      data-aos-easing="linear"
-      data-aos-duration="1500">
+      <nav
+        class="navbar navbar-expand-lg"
+        data-aos="fade-down"
+        data-aos-easing="linear"
+        data-aos-duration="1500"
+      >
         <div class="container">
           <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
           <button
@@ -104,13 +107,16 @@
             aria-label="Slide 3"
           ></button>
         </div>
-        <div class="carousel-inner"data-aos="fade-left"
-        data-aos-anchor="#example-anchor"
-        data-aos-offset="500"
-        data-aos-duration="2000">
+        <div
+          class="carousel-inner"
+          data-aos="fade-left"
+          data-aos-anchor="#example-anchor"
+          data-aos-offset="500"
+          data-aos-duration="2000"
+        >
           <div class="carousel-item active" data-bs-interval="2000">
             <img
-              src="img/Banners/woman-2564660_1920.jpg"
+              src="img/Banners/carrousel-1.jpg"
               class="d-block w-100"
               alt="img de una mujer"
             />
@@ -120,7 +126,7 @@
           </div>
           <div class="carousel-item" data-bs-interval="2000">
             <img
-              src="img/Banners/Zapatilla.png"
+              src="img/Banners/carrousel-2.png"
               class="d-block w-100"
               alt="img de zapatilla"
             />
@@ -130,7 +136,7 @@
           </div>
           <div class="carousel-item" data-bs-interval="2000">
             <img
-              src="img/Remeras/foto6.jpg"
+              src="img/Remeras/carrousel-3.jpg"
               class="d-block w-100"
               alt="img de remeras"
             />
@@ -161,7 +167,11 @@
       <!--Fin carrousel-->
 
       <section class="sale">
-        <div class="container py-5" data-aos="fade-left" data-aos-duration="1500">
+        <div
+          class="container py-5"
+          data-aos="fade-left"
+          data-aos-duration="1500"
+        >
           <h1 class="text-center">On Sale</h1>
           <div class="row py-5">
             <div class="col-lg-3">
@@ -308,9 +318,12 @@
         <h1 class="criticas__titulo text-center p-5">
           Nuestras <span>Clientas</span>
         </h1>
-        <div class="criticas__contenedor"data-aos="flip-left"
-        data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000">
+        <div
+          class="criticas__contenedor"
+          data-aos="flip-left"
+          data-aos-easing="ease-out-cubic"
+          data-aos-duration="2000"
+        >
           <div class="criticas__contenedor__ind">
             <div class="criticas__contenedor__estrellas">
               <i class="fas fa-star"></i>
