section abrigos - descuentos

--- a/abrigos.html
+++ b/abrigos.html
@@ -71,6 +71,47 @@
         </div>
       </nav>
     </header>
+    <section class="descuentos remeras">
+      <h2 class="text-center">Ofertas por tiempo Limitado</h2>
+      <div class="descuentos__contenedor">
+        <div class="descuentos__contenedor__tarjeta">
+          <figure>
+            <img src="img/Abrigos/img para descuentos/buzo-cala.jpg" class="frontal" alt="">
+            <figcaption class="trasera">
+              <h3>Descuentos de:</h3>
+              <hr>
+              <p class="h1">50%</p>
+              <p class="h3">40%</p>
+              <p class="h4">30%</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="descuentos__contenedor__tarjeta">
+          <figure>
+            <img src="img/Abrigos/img para descuentos/foto3.jpg" class="frontal" alt="">
+            <figcaption class="trasera">
+              <h3>Descuentos de:</h3>
+              <hr>
+              <p class="h1">50%</p>
+              <p class="h3">40%</p>
+              <p class="h4">30%</p>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="descuentos__contenedor__tarjeta">
+          <figure>
+            <img src="img/Abrigos/img para descuentos/buzo-pinkf.jpg" class="frontal" alt="">
+            <figcaption class="trasera">
+              <h3>Descuentos de:</h3>
+              <hr>
+              <p class="h1">50%</p>
+              <p class="h3">40%</p>
+              <p class="h4">30%</p>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
 
     <section class="remeras">
       <div class="container py-5">
