--- a/productos.html
+++ b/productos.html
@@ -12,8 +12,9 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
-    <!--Scroll Reveal-->
-    <script src="js/scrollreveal.js"></script>
+    <!--Aos animate-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <!--Mi CSS-->
     <link rel="stylesheet" href="style/css/styles.css" />
     <!--Google fonts-->
@@ -32,7 +33,12 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg">
+      <nav
+        class="navbar navbar-expand-lg"
+        data-aos="fade-down"
+        data-aos-easing="linear"
+        data-aos-duration="1500"
+      >
         <div class="container">
           <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
           <button
@@ -72,132 +78,131 @@
       </nav>
     </header>
 
-    <section class="productos">
-      <div class="container my-5 pt-5">
-        <div class="row">
-          <div class="col-lg-6 col-md-12 col-12">
-            <img
-              src="img/Remeras/foto10.jpg"
-              alt="img de una remera"
-              class="img-fluid w-100"
-            />
-          </div>
-          <div class="col-lg-6 col-md-12 col-12">
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-                <li class="breadcrumb-item active" aria-current="page">
-                  Remeras
-                </li>
-              </ol>
-            </nav>
-            <h3 class="my-3">Remera Mickey</h3>
-            <span>$1.499</span>
-            <select class="my-3">
-              <option>Talle</option>
-              <option>XL</option>
-              <option>L</option>
-              <option>M</option>
-              <option>S</option>
-            </select>
-            <input type="number" value="1" />
-            <button class="btn2 comprar">Comprar</button>
-            <h4 class="mt-5 mb-5">Detalle del producto</h4>
-            <span
-              >Nuestras remeras estan confeccionadas con Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Impedit incidunt natus
-              cupiditate sequi magni dolorem vitae iusto officia id et!</span
-            >
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="remeras">
-      <div class="container py-5">
-        <h2 class="text-center">Productos relacionados</h2>
-        <div class="row py-5">
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Remeras/foto10.jpg"
-              alt="img de una remera"
-              class="img-fluid"
-            />
-            <h4>Remeras</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button
-              class="scroll__boton"
-              onclick="location.href='productos.html'"
-            >
-              Ver
-            </button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Remeras/foto5.jpg"
-              alt="img de una remera"
-              class="img-fluid"
-            />
-            <h4>Remeras</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button
-              class="scroll__boton"
-              onclick="location.href='productos.html'"
-            >
-              Ver
-            </button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Remeras/foto2.jpg"
-              alt="img de una remera"
-              class="img-fluid"
-            />
-            <h4>Remeras</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button
-              class="scroll__boton"
-              onclick="location.href='productos.html'"
-            >
-              Ver
-            </button>
-          </div>
-          <div class="col-lg-3 remeras__card">
-            <img
-              src="img/Remeras/foto9.jpg"
-              alt="img de una remera"
-              class="img-fluid"
-            />
-            <h4>Remeras</h4>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><i class="fa fa-star-o"></i></span>
-            <p>$1.999</p>
-            <button
-              class="scroll__boton"
-              onclick="location.href='productos.html'"
-            >
-              Ver
-            </button>
+    <main>
+      <section class="productos">
+        <div class="container my-5 pt-5">
+          <div class="row">
+            <div class="col-lg-6 col-md-12 col-12">
+              <img
+                src="img/Remeras/foto10.jpg"
+                alt="img de una remera"
+                class="img-fluid w-100"
+              />
+            </div>
+            <div class="col-lg-6 col-md-12 col-12">
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">
+                    Remeras
+                  </li>
+                </ol>
+              </nav>
+              <h3 class="my-3">Remera Mickey</h3>
+              <span>$1.499</span>
+              <select class="my-3">
+                <option>Talle</option>
+                <option>XL</option>
+                <option>L</option>
+                <option>M</option>
+                <option>S</option>
+              </select>
+              <input type="number" value="1" />
+              <button class="btn2 comprar">Comprar</button>
+              <h4 class="mt-5 mb-5">Detalle del producto</h4>
+              <span
+                >Nuestras remeras estan confeccionadas con Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Impedit incidunt natus
+                cupiditate sequi magni dolorem vitae iusto officia id et!</span
+              >
+            </div>
           </div>
         </div>
+      </section>
+  
+      <section class="remeras">
+        <div class="container py-5">
+          <h2 class="text-center">Productos relacionados</h2>
+          <div class="row py-5">
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Remeras/foto10.jpg"
+                alt="img de una remera"
+                class="img-fluid"
+              />
+              <h4>Remeras</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button            
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Remeras/foto5.jpg"
+                alt="img de una remera"
+                class="img-fluid"
+              />
+              <h4>Remeras</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Remeras/foto2.jpg"
+                alt="img de una remera"
+                class="img-fluid"
+              />
+              <h4>Remeras</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+            <div class="col-lg-3 remeras__card">
+              <img
+                src="img/Remeras/foto9.jpg"
+                alt="img de una remera"
+                class="img-fluid"
+              />
+              <h4>Remeras</h4>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star-o"></i></span>
+              <p>$1.999</p>
+              <button
+                onclick="location.href='productos.html'"
+              >
+                Ver
+              </button>
+            </div>
+          </div>
+  
+    </main>
 
     <!--Footer-->
     <footer class="footer">
@@ -299,13 +304,18 @@
         </div>
       </div>
     </footer>
-    <script src="js/scrollreveal.js"></script>
+    <!--Aos animate-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <!--Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
-
+    <!--Font Awesome-->
     <script
       src="https://kit.fontawesome.com/7d4193cf05.js"
       crossorigin="anonymous"
