se modifican las img de la section descuentos

--- a/abrigos.html
+++ b/abrigos.html
@@ -76,7 +76,7 @@
       <div class="descuentos__contenedor">
         <div class="descuentos__contenedor__tarjeta">
           <figure>
-            <img src="img/Abrigos/img para descuentos/buzo-cala.jpg" class="frontal" alt="">
+            <img src="img/Abrigos/img para descuentos/foto1.jpg" class="frontal" alt="foto de una campera">
             <figcaption class="trasera">
               <h3>Descuentos de:</h3>
               <hr>
@@ -88,7 +88,7 @@
         </div>
         <div class="descuentos__contenedor__tarjeta">
           <figure>
-            <img src="img/Abrigos/img para descuentos/foto3.jpg" class="frontal" alt="">
+            <img src="img/Abrigos/img para descuentos/foto2.jpg" class="frontal" alt="foto de una campera">
             <figcaption class="trasera">
               <h3>Descuentos de:</h3>
               <hr>
@@ -100,7 +100,7 @@
         </div>
         <div class="descuentos__contenedor__tarjeta">
           <figure>
-            <img src="img/Abrigos/img para descuentos/buzo-pinkf.jpg" class="frontal" alt="">
+            <img src="img/Abrigos/img para descuentos/foto3.jpg" class="frontal" alt="foto de una campera">
             <figcaption class="trasera">
               <h3>Descuentos de:</h3>
               <hr>
